# mssql_mcp_server

./: MAVEN_README.md  mvnw  mvnw.cmd  mvnw.py  pom.xml  pyproject.toml  set_maven_env.ps1  set_maven_env.sh  test_maven.py
src/main/java/com/example/app/: App.java
src/maven_startup_mcp_server/: __init__.py  maven_wrapper.py  server.py
src/mssql_mcp_server/: __init__.py
src/test/java/com/example/app/: AppTest.java
